# viper-db

./: .gitignore  CLAUDE.md  CMakeLists.txt  test.cpp  viperdb.grpc.pb.cc  viperdb.grpc.pb.h  viperdb.pb.cc  viperdb.pb.h  viperdb.proto  viperdbservice.cpp  viperdbservice.h
.cache/clangd/index/: similarity.cpp.78A6D5097A21BC61.idx  similarity.h.F297B2E7EE7F8AFD.idx  similarityTest.cpp.BE6C5CE13F251D46.idx  test.cpp.0BB11857C26BCB6A.idx  uuid.cpp.0B37FAEB18BF141E.idx  uuid.h.87486F56B4D29DE3.idx  viperdb.pb.cc.8238238B4CFC5DB2.idx  viperdb.pb.h.B3150CE66380CA41.idx  viperdbTest.cpp.B4102A9D4EC63885.idx  viperdbTest.h.8FB22F1ECA838937.idx  viperdbservice.cpp.B1EF915E5932894A.idx  viperdbservice.h.4D3C6430DF00E183.idx
store/: buffer.cpp  buffer.h  ndvector.h
testing/: similarityTest.cpp  viperdbTest.cpp  viperdbTest.h
utils/: cosineSimilairty.cpp  similarity.cpp  similarity.h  uuid.cpp  uuid.h
